examples/errors/duplicatevar.dvx
int main() {
  int a,b;
  a = 1;
  bool b;
  b = true;
}
